# sentinel

./: .dockerignore  .env.example  .gitignore  .gitleaks.toml  CONTRIBUTING.md  NOTICE  README.md  SECURITY.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  sentinel-cli.sh  start-stack.sh
apps/backend/araios/: .env.example  README.md  config.py  main.py  pyproject.toml
apps/backend/araios/app/: permissions.py  platform_auth.py  schemas.py
apps/backend/araios/app/database/: database.py  models.py  seed.py
apps/backend/araios/app/middleware/: auth.py
apps/backend/araios/app/routers/: agent_guide.py  approvals.py  coordination.py  documents.py  github_tasks.py  manifest.py  modules.py  permissions.py  platform_auth.py  settings.py  tasks.py
apps/backend/araios/app/services/: auth_settings.py  executor.py
apps/backend/araios/modules/: clients.json  competitors.json  github.json  launch.json  leads.json  positioning.json  proposals.json  security.json  slack.json
apps/backend/araios/scripts/: agent_discovery.py  seed_modules.py
apps/backend/araios/static/: index.html
apps/backend/araios/static/assets/: index-Brb70fPE.js  index-D6qZaRLJ.css
apps/backend/araios/tests/: conftest.py  test_approval_flows.py  test_approvals.py  test_auth.py  test_clients.py  test_competitors.py  test_coordination.py  test_documents.py  test_executor.py  test_github_tasks.py  test_leads.py  test_module_action_params.py  test_module_approvals.py  test_permissions.py  test_platform_auth_routes.py  test_positioning.py  test_tasks.py
apps/backend/sentinel/: .env.example  README.md  alembic.instance.ini  alembic.manager.ini  pyproject.toml
apps/backend/sentinel/app/: config.py  dependencies.py  desktop_entry.py  logging_context.py  main.py
apps/backend/sentinel/app/database/: __init__.py  (+2 more)
apps/backend/sentinel/docs/: cleanup-roadmap.md
apps/backend/sentinel/scripts/: agent_cli.py  browser_tool_live_check.py  browser_tool_repl.py  browser_tool_x_signup_try.py  start-backend.sh
apps/backend/sentinel/tests/: conftest.py  fake_db.py  helpers.py  test_admin.py  test_agent_cli.py  test_agent_loop.py  test_agent_loop_approval_hints.py  test_agent_modes.py  test_agent_modes_api.py  test_agent_run_registry.py  test_agent_runtime_adapters.py  test_agent_runtime_contracts.py  test_agent_runtime_runner_adapter.py  test_alembic_baselines.py  test_anthropic_caching_strategy.py  test_approval_extractors.py  test_approval_waiters.py  test_auth_flow.py  test_auth_schema_boundary.py  test_backup.py  test_browser_tools.py  test_chat_endpoint.py  test_compaction.py  test_compaction_llm.py  test_config.py  test_context_builder_modes.py  test_context_usage.py  test_credential_scrubber.py  test_docker_runtime_provider.py  test_dynamic_module_permissions.py  test_e2e_anthropic_oauth_cache_live.py  test_e2e_anthropic_oauth_live.py  test_e2e_anthropic_scoped_cache_live.py  test_embeddings.py  test_error_format.py  test_estop.py  test_git_accounts.py  test_git_exec_tool.py  test_git_tool.py  test_grouped_module_tools.py  (+68 more)
(+643 files in other folders)
